--- a/ui/package.json
+++ b/ui/package.json
@@ -9,21 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@carbon/react": "^1.30.0",
+    "@types/node": "20.3.2",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
-    "carbon-components": "^10.58.3",
-    "carbon-icons": "^7.0.7",
-    "next": "13.4.4",
+    "class-variance-authority": "^0.6.1",
+    "clsx": "^1.2.1",
+    "envsafe": "^2.0.3",
+    "lucide-react": "^0.252.0",
+    "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.62.1",
+    "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
-  },
-  "devDependencies": {
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4"
+    "tailwindcss-animate": "^1.0.6",
+    "typescript": "5.1.3"
   }
 }
